Add ability to upgrade and downgrade an idea

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -4,3 +4,17 @@
   padding: 10px;
   cursor: pointer;
 }
+
+.upgrade-button {
+  color: white;
+  background-color: green;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.downgrade-button {
+  color: white;
+  background-color: red;
+  padding: 10px;
+  cursor: pointer;
+}
