Add ability to search for ideas

--- a/app/views/ideas/all.html.erb
+++ b/app/views/ideas/all.html.erb
@@ -1,5 +1,5 @@
 <nav>
-  <p>Placeholder</p>
+Search: <input type='text' name='search' id='search'><br>
 </nav>
 Title: <input type='text' name='title' id='idea-title'><br>
 Body: <input type='text' name='body' id='idea-body'><br>
