--- a/app/views/ideas/all.html.erb
+++ b/app/views/ideas/all.html.erb
@@ -1,8 +1,8 @@
 <nav>
-Search: <input type='text' name='search' id='search'><br>
+<input type='text' name='search' id='search' placeholder='search'><br>
 </nav>
-Title: <input type='text' name='title' id='idea-title'><br>
-Body: <input type='text' name='body' id='idea-body'><br>
-<input type="submit" id="idea-submit" value="Submit">
+<input type='text' name='title' id='idea-title' placeholder='title'><br>
+<input type='text' name='body' id='idea-body' placeholder='idea'><br>
+<div type="submit" id="idea-submit">Submit</div>
 <main>
 </main>
