--- a/app/views/ideas/all.html.erb
+++ b/app/views/ideas/all.html.erb
@@ -1,8 +1,14 @@
 <nav>
-<input type='text' name='search' id='search' placeholder='search'><br>
+  <div class='nav-container'>
+    <h1>Idea Box</h1>
+    <p id="new-idea">New Idea</p>
+    <input type='text' name='search' id='search' placeholder='search'><br>
+  </div>
 </nav>
-<input type='text' name='title' id='idea-title' placeholder='title'><br>
-<input type='text' name='body' id='idea-body' placeholder='idea'><br>
-<div type="submit" id="idea-submit">Submit</div>
+<div id="idea-form">
+  <input type='text' name='title' id='idea-title' placeholder='title'><br>
+  <textarea name='body' id='idea-body' placeholder='idea'></textarea><br>
+  <div type="submit" id="idea-submit">Submit</div>
+</div>
 <main>
 </main>
