Change Submit to Save to comply with spec

--- a/app/views/ideas/all.html.erb
+++ b/app/views/ideas/all.html.erb
@@ -8,7 +8,7 @@
 <div id="idea-form">
   <input type='text' name='title' id='idea-title' placeholder='title'><br>
   <textarea name='body' id='idea-body' placeholder='idea'></textarea><br>
-  <div type="submit" id="idea-submit">Submit</div>
+  <div type="submit" id="idea-submit">Save</div>
 </div>
 <main>
 </main>
