Refactor upgrade and downgrade functionality to share multiple functions

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -133,12 +133,12 @@ input {
   background-color: $warning;
 }
 
-.upgrade-button {
+.upgrade {
   @extend .idea-buttons;
   background-color: $success;
 }
 
-.downgrade-button {
+.downgrade {
   @extend .idea-buttons;
   background-color: $warning;
 }
